# session-tester

./: .gitignore  Dockerfile  LICENSE  README.md  README_en.md  __init__.py  batch.py  client.py  pyproject.toml  requirements.txt  session.py  testcase.py  tester.py  user_info.py  utils.py
.github/workflows/: pylint.yml
demo/: demo_svr.py  session_test_demo.py
docs/: session_lifecycle.puml
session_tester/: __init__.py  client.py  decorator.py  logger.py  request.py  session.py  session_maintainer.py  test_suite.py  testcase.py  tester.py  user_info.py  utils.py
session_tester/cases/: __init__.py  common.py  dist_stat.py
src/: __init__.py  batch.py  client.py  session.py  session_maintainer.py  test_suite.py  testcase.py  tester.py  utils.py
